# buddy_backend

./: .dockerignore  .env.example  .env.staging.example  .gitignore  Dockerfile  README.md  docker-compose.staging.yml  prompt.md  pyproject.toml
apps/accounts/: admin.py  backends.py  managers.py  models.py  tasks.py  utils.py
apps/accounts/api/: urls.py
apps/accounts/api/v1/: urls.py
apps/accounts/api/v1/serializers/: __init__.py  input.py  output.py
apps/accounts/api/v1/views/: __init__.py  google.py  login.py  logout.py  me.py  register.py  token.py  user_list.py
apps/accounts/management/commands/: seed_users.py
apps/accounts/migrations/: 0001_initial.py  0002_user_avatar.py  0003_user_designation.py
apps/accounts/selectors/: user_selectors.py
apps/accounts/services/: google_auth_services.py  user_services.py
apps/chat/: admin.py  consumers.py  models.py  tasks.py
apps/chat/api/: urls.py
apps/chat/api/v1/: urls.py
apps/chat/api/v1/serializers/: __init__.py  input.py  output.py
apps/chat/api/v1/views/: __init__.py  conversation_list_create.py  conversation_mark_read.py  conversation_message_list_create.py
apps/chat/migrations/: 0001_initial.py
apps/chat/selectors/: chat_selectors.py
apps/chat/services/: chat_services.py
apps/comments/: admin.py  constants.py  filters.py  models.py
apps/comments/api/: urls.py
apps/comments/api/v1/: urls.py
apps/comments/api/v1/serializers/: __init__.py  input.py  output.py
apps/comments/api/v1/views/: __init__.py  comment_detail.py  comment_list_create.py  comment_reply_list_create.py
apps/comments/migrations/: 0001_initial.py  0002_comment_dislikes_count.py
apps/comments/permissions/: __init__.py  comment_permissions.py
apps/comments/selectors/: __init__.py  comment_selectors.py
apps/comments/services/: __init__.py  comment_services.py
apps/common/: logging.py  middleware.py  models.py  throttling.py
apps/common/api/: exceptions.py  fields.py  health.py  mixins.py  pagination.py  renderers.py  schema.py  types.py
apps/likes/: admin.py  models.py
apps/likes/api/: urls.py
apps/likes/api/v1/: urls.py
apps/likes/api/v1/serializers/: __init__.py  output.py
apps/likes/api/v1/views/: __init__.py  comment_like.py  comment_likers.py  post_like.py  post_likers.py
apps/likes/migrations/: 0001_initial.py
apps/likes/selectors/: __init__.py  like_selectors.py
apps/likes/services/: __init__.py  like_services.py
apps/notifications/: admin.py  choices.py  consumers.py  filters.py  models.py  tasks.py
apps/notifications/api/: urls.py
apps/notifications/api/v1/: urls.py
apps/notifications/api/v1/serializers/: __init__.py  output.py
apps/notifications/api/v1/views/: __init__.py  notification_list.py  notification_mark_all_read.py  notification_mark_read.py  notification_unread_count.py
apps/notifications/migrations/: 0001_initial.py
apps/notifications/selectors/: notification_selectors.py
apps/notifications/services/: notification_services.py
apps/posts/: admin.py  choices.py  constants.py  filters.py  models.py
apps/posts/api/: urls.py
apps/posts/api/v1/: urls.py
apps/posts/api/v1/serializers/: __init__.py  input.py  output.py
apps/posts/api/v1/views/: __init__.py  post_detail.py  post_list_create.py
apps/posts/migrations/: 0001_initial.py  0002_post_dislikes_count.py
apps/posts/permissions/: __init__.py  post_permissions.py
apps/posts/selectors/: __init__.py  post_selectors.py
apps/posts/services/: __init__.py  post_services.py
apps/posts/validators/: __init__.py  image_validators.py  media_validators.py  video_validators.py
apps/reactions/: admin.py  choices.py  filters.py  models.py
apps/reactions/api/: urls.py
apps/reactions/api/v1/: urls.py
apps/reactions/api/v1/serializers/: __init__.py  input.py  output.py
apps/reactions/api/v1/views/: __init__.py  comment_reaction.py  comment_reactors.py  post_reaction.py  post_reactors.py
apps/reactions/migrations/: 0001_initial.py
apps/reactions/selectors/: __init__.py  reaction_selectors.py
apps/reactions/services/: __init__.py  reaction_services.py
config/: asgi.py  celery.py  middleware.py  routing.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  staging.py
docker/: entrypoint.sh  gunicorn.conf.py  nginx.conf
