[project]
name = "buddy-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=5.2.8,<6.0",
    "django-celery-beat>=2.9.0",
    "django-celery-results>=2.6.0",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "django-environ>=0.14.0",
    "django-filter>=26.1",
    "django-cors-headers>=4.9.0",
    "django-redis>=7.0.0",
    "drf-spectacular>=0.30.0",
    "psycopg[binary]>=3.3.4",
    "pillow>=12.3.0",
    "gunicorn>=26.0.0",
    "channels>=4.3.2",
    "channels-redis>=4.3.0",
    "argon2-cffi>=23.1.0",
    "structlog>=25.1.0",
    "python-json-logger>=3.2.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-django>=4.12.0",
    "pytest-cov>=7.1.0",
    "factory-boy>=3.3.3",
    "faker>=40.28.1",
    "coverage>=7.15.0",
    "ruff>=0.15.21",
    "mypy>=2.1.0",
    "django-stubs>=6.0.6",
    "djangorestframework-stubs>=3.17.0",
    "bandit>=1.9.4",
    "detect-secrets>=1.5.0",
    "pre-commit>=4.6.0",
    "django-debug-toolbar>=7.0.0",
]
