[project]
name = "buddy-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=5.2.8,<6.0",
    "django-celery-beat>=2.9.0",
    "django-celery-results>=2.6.0",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "django-environ>=0.14.0",
    "django-filter>=26.1",
    "django-cors-headers>=4.9.0",
    "django-redis>=7.0.0",
    "drf-spectacular>=0.30.0",
    "psycopg[binary]>=3.3.4",
    "pillow>=12.3.0",
    "gunicorn>=26.0.0",
    "channels>=4.3.2",
    "channels-redis>=4.3.0",
    "argon2-cffi>=23.1.0",
    "structlog>=25.1.0",
    "python-json-logger>=3.2.0",
    "google-auth>=2.35.0",
    "requests>=2.34.2",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-django>=4.12.0",
    "pytest-cov>=7.1.0",
    "factory-boy>=3.3.3",
    "faker>=40.28.1",
    "coverage>=7.15.0",
    "ruff>=0.15.21",
    "mypy>=2.1.0",
    "django-stubs>=6.0.6",
    "djangorestframework-stubs>=3.17.0",
    "bandit>=1.9.4",
    "detect-secrets>=1.5.0",
    "pre-commit>=4.6.0",
    "django-debug-toolbar>=7.0.0",
    "pip-audit>=2.7.0",
]

# ─────────────────────────────────────────────────────────────────
# Ruff — lint + format
# ─────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py314"
line-length = 100
extend-exclude = ["migrations"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "DJ",  # flake8-django
    "SIM", # flake8-simplify
]
ignore = [
    "DJ001", # nullable CharField/TextField — too many legitimate uses to blanket-forbid
]

[tool.ruff.lint.per-file-ignores]
# Django's own settings-layering idiom (`from .base import *`) is intentional
# here, not an oversight — see config/settings/{local,staging,production}.py.
"config/settings/local.py" = ["F403", "F405"]
"config/settings/staging.py" = ["F403", "F405"]
"config/settings/production.py" = ["F403", "F405"]

[tool.ruff.lint.isort]
known-first-party = ["apps", "config"]

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

# ─────────────────────────────────────────────────────────────────
# mypy — static type checking
# ─────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.14"
plugins = ["mypy_django_plugin.main"]
mypy_path = "."
namespace_packages = true
explicit_package_bases = true
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
exclude = ["^.*/migrations/.*$"]

[[tool.mypy.overrides]]
module = "*.migrations.*"
ignore_errors = true

[tool.django-stubs]
django_settings_module = "config.settings.local"

# ─────────────────────────────────────────────────────────────────
# pytest — test runner
# ─────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.local"
python_files = ["test_*.py", "*_test.py"]
addopts = "--reuse-db"

# ─────────────────────────────────────────────────────────────────
# coverage — enforced via pytest-cov in CI (see .github/workflows/ci.yml)
# ─────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["apps"]
branch = true
omit = ["*/migrations/*", "*/tests/*", "*/__init__.py", "manage.py"]

[tool.coverage.report]
fail_under = 85
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

# ─────────────────────────────────────────────────────────────────
# bandit — scans OUR source for insecure patterns (not dependencies — see pip-audit)
# ─────────────────────────────────────────────────────────────────
[tool.bandit]
exclude_dirs = [".venv", "migrations", "tests"]
